--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="menu">
 <menu>
     <ul>
-        <li><a href="Index.html">Index</a></li>
+        <li><a href="index.html">Index</a></li>
         <hr>
         <li><a href="About.html">About</a></li>
         <hr>
