--- a/Gallery.html
+++ b/Gallery.html
@@ -19,9 +19,9 @@
                 <hr>
             </ul>
         </menu></div>
-    <img src="IMG/1.jpg" ><br>
-    <img src="IMG/2.jpg" ><br>
-    <img src="IMG/3.jpg" ><br>
-    <img src="IMG/4.jpg" ><br>
+    <img src="1.jpg" ><br>
+    <img src="2.jpg" ><br>
+    <img src="3.jpg" ><br>
+    <img src="4.jpg" ><br>
 </body>
 </html>
